<resources>
    <string name="app_name">NCCPS</string>
    <string name="update_database">更新本地数据库，请稍等</string>
    <string name="bottom_tab_home">首页</string>
    <string name="bottom_tab_broadcast">播客</string>
    <string name="bottom_tab_me">我</string>
    <string name="secretary_trip">http://app.incongress.cn/webapp/discussion/cit/zjxc/index.html?lan=%1$s</string>
    <string name="reg_online_cn">http://www.citmd.com/sub/app/reg.php</string>
    <string name="reg_online_en">http://www.citmd.com/sub/app/e_reg.php</string>
    <string name="home_commend">精彩课件</string>
    <string name="session_book">课件预约</string>
    <string name="alpha_theme_color">#CCe70d25</string>
    <string name="nowifi">当前网络不可用,请检查你的网络设置</string>
    <string name="current_time">当前时间：%1$s</string>
    <string name="all_room">所有会议室</string>
    <string name="now_no_sessions">当前没有正在进行的会议</string>
    <string name="next_no_sessions">没有即将进行的会议</string>
    <string name="new_apk_find_tips">新版正在后台下载，您可继续使用应用，稍后将自动安装...</string>
    <string name="first_start_tips">第一次启动，正在加载数据，请稍等</string>
    <string name="load_complete_tips">加载完毕，正在检测是否有新的数据</string>
    <string name="find_new_data_tips">检测到有数据更新，是否现在进行更新呢？</string>
    <string name="conference_delete_tips">确定要下载该会议的数据包吗？删除后打开需要重新下载哦。</string>
    <string name="home_look_schedule">看日程</string>
    <string name="home_search_schedule">查日程</string>
    <string name="home_my_schedule">我的日程</string>
    <string name="home_review">精彩回顾</string>
    <string name="home_newscenter">新闻中心</string>
    <string name="home_community">会议社区</string>
    <string name="home_wallpaper">壁报</string>
    <string name="home_schedule">会议日程</string>
    <string name="home_now">正在进行</string>
    <string name="home_next">即将进行</string>
    <string name="home_speakersearch">讲者检索</string>
    <string name="home_meetingguide">参会指南</string>
    <string name="home_exhibitors">参展商</string>
    <string name="home_exhibitoractivity">展商活动</string>
    <string name="home_search">搜索</string>
    <string name="home_scane">扫一扫</string>
    <string name="home_setting">设置</string>
    <string name="home_electroniccase">电子病例</string>
    <string name="home_secretary">专家秘书</string>
    <string name="home_messagestation">消息站</string>
    <string name="home_live_and_q">Live Q&#038;A</string>
    <string name="home_scene_xiu">现场秀</string>
    <string name="home_cit_college">NCCPS学院</string>
    <string name="home_me">我</string>
    <string name="home_cit_live">NCCPS直播</string>
    <string name="home_interactive">现场互动</string>
    <string name="home_icon_bl">病例</string>
    <string name="home_hands_on">实习中心</string>
    <string name="survey">调研</string>
    <string name="search_faculty_hint">请输入专家关键字</string>
    <string name="home_icon_reg_online">在线注册</string>
    <string name="home_icon_professor_trip">专家行程</string>
    <string name="meeting_schedule_share">分享</string>
    <string name="meeting_schedule_note">笔记</string>
    <string name="meeting_schedule_txwb">腾讯微博</string>
    <string name="meeting_schedule_wx">微信</string>
    <string name="meeting_schedule_circle">朋友圈</string>
    <string name="meeting_schedule_yj">邮件</string>
    <string name="meeting_schedule_dx">短信</string>
    <string name="meeting_schedule_room_location">定位图</string>
    <string name="meeting_schedule_detail_title">日程详情</string>
    <string name="meeting_schedule_location">定位</string>
    <string name="meeting_schedule_alarm">闹铃</string>
    <string name="metting_node_edit_no_data">请输入笔记内容再保存</string>
    <string name="secretary_title">Ta的学术任务</string>
    <string name="my_schedule_edit">编辑</string>
    <string name="my_schedule_tips">您还未对当天的日程和发言进行闹铃设置</string>
    <string name="cit_net_error">您的网络不给力哦，请稍后再试</string>
    <string name="dzbb_search_title_author">搜索标题/作者关键词</string>
    <string name="dzbb_sort">排序</string>
    <string name="sort_by_code">按壁报编号排序</string>
    <string name="sort_by_author">按作者排序</string>
    <string name="dzbb_discussion">参与讨论(%d)</string>
    <string name="dzbb_discussion_no_blacket">参与讨论</string>
    <string name="dzbb_detail">壁报详情</string>
    <string name="dzbb_comment_tie">%d 讨论</string>
    <string name="dzbb_share">分享</string>
    <string name="dzbb_no_data">无结果</string>
    <string name="home_icon_hyzs">新闻中心</string>
    <string name="home_icon_presidium">Faculty\nExclusive</string>
    <string name="loading_video">loading…</string>
    <string name="conference_exit_app">确定要退出参会易应用吗?</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>
    <string name="loading">加载中…</string>
    <string name="scenic_xiu_speaker_list">讲者列表</string>
    <string name="enter_secretary_name">请输入您的姓名</string>
    <string name="enter_blank">输入不能为空</string>
    <string name="no_such_secretary_name">小秘书并未找到此姓名专家,\n请检查是否有错别字后重新输入</string>
    <string name="yes_such_secretary_name"><Data><![CDATA[ <h3>恭喜您开启专家秘书功能!</h3>贴心的小秘书将在您参与的会议前%d分钟进行提醒,敬请期待哟!如需更改会议提醒时间,可在首页\"我的大会>参会提醒设置\"中更改 ]]></Data></string>
    <string name="part_in_activitys">我的学术任务</string>
    <string name="open_my_meeting_alarm">一键提醒</string>
    <string name="close_my_meeting_alarm">关闭提醒</string>
    <string name="shut_down_my_meeting_alarm">关闭我的会议秘书提醒功能</string>
    <string name="secretay_role">任务：</string>
    <string name="logout">退出</string>
    <string name="success_open_alarm">您已启动所有会议提醒\n小秘书将在会议开始前%d分钟提醒您！</string>
    <string name="success_close_alarm">您已关闭所有会议提醒</string>
    <string name="secretary_time">时间:</string>
    <string name="secretary_location">地点:</string>
    <string name="secretary_session">会议:</string>
    <string name="secretary_speaker">发言:</string>
    <string name="logout_secretary">退出小秘书将关闭所有会议提醒\n确认是否退出？</string>
    <string name="secretary_login">开启专家秘书功能</string>
    <string name="secretary_no_info">抱歉，会议已结束，\n小秘书期待来年与您相会！</string>
    <string name="secretary_loading">小秘书正在加载…</string>
    <string name="secretary_type_role">任务:</string>
    <string name="secretary_info">查看专家简介</string>
    <string name="secretary_info_url">http://app.incongress.cn/Conferences/jsp/html5/expertRemark.jsp?conferencesId=%1$s&amp;entityId=%2$s&amp;lan=%3$s</string>
    <string name="splash_login">正在自动登录</string>
    <string name="splash_checking">加载数据中，并检查更新内容</string>
    <string name="splash_downloading">正在下载%1$s</string>
    <string name="splash_downloaded">下载完成，正在升级</string>
    <string name="incongress_data_update">有新的会议信息，是否现在更新？</string>
    <string name="incongress_data_update_fail">连接失败，是否重新连接？</string>
    <string name="incongress_connect_fail">连接失败请重新操作!</string>
    <string name="incongress_send_success">发送成功!</string>
    <string name="incongress_send_fail">发送失败!</string>
    <string name="incongress_send_no_more_data">没有更多数据!</string>
    <string name="incongress_connect_remaind">请先连接网络哦</string>
    <string name="incongress_register">免费注册</string>
    <string name="history_post_empty">您还未发表过帖子，请前往现场秀来发表自己的见解</string>
    <string name="splash_schedule">正在解析日程信息,请耐心等候</string>
    <string name="splash_onference">正在解析会场信息,请耐心等候</string>
    <string name="splash_speaker">正在解析专家信息,请耐心等候</string>
    <string name="splash_exhibitor">正在解析参展商信息,请耐心等候</string>
    <string name="incongress_login">登录</string>
    <string name="login_phone_hint">手机</string>
    <string name="login_password_hint">密码</string>
    <string name="login_password_forget">忘记密码</string>
    <string name="login_try_use">先用用看</string>
    <string name="login_no_phone_password">请输入手机号和密码!</string>
    <string name="given_name">Given Name</string>
    <string name="family_name">Family Name</string>
    <string name="hysq_list_no_data">暂无发帖，快来和同行们一起参与互动吧！</string>
    <string name="hysq_item_no_data">暂无跟帖，快来抢沙发吧！</string>
    <string name="hysq_home_zan">点赞</string>
    <string name="hysq_home_pinlun">评论</string>
    <string name="hysq_home_item_detail">帖子详情</string>
    <string name="hysq_home_jiangliangju_jiangzhe">讲者</string>
    <string name="hysq_home_jiangliangju_huiyi">会议</string>
    <string name="hysq_home_jiangliangju_huiyi_name">会议名称</string>
    <string name="hysq_home_jiangliangju_biaoqing">表情</string>
    <string name="hysq_home_jiangliangju_jianpan">键盘</string>
    <string name="hysq_home_hint">说两句吧</string>
    <string name="hysq_home_right_navbar_title">说两句</string>
    <string name="hysq_home_jiangliangju_title">我来说两句</string>
    <string name="hysq_home_jiangliangju_sousuo">搜索讲者名称</string>
    <string name="hysq_home_huiyimingcheng_sousuo">搜索会议名称</string>
    <string name="hysq_home_huiyimingcheng_now">正在进行</string>
    <string name="hysq_home_huiyimingcheng_all">全部</string>
    <string name="hysq_home_comment_zan">%d 赞</string>
    <string name="hysq_home_comment_tie">%d 跟贴</string>
    <string name="hysq_home_comment_post">发表</string>
    <string name="hysq_home_comment_gen">跟两句…</string>
    <string name="hysq_jiangliangju_titlebar_send_hint">发送</string>
    <string name="hysq_jiangliangju_zuijin">最近@的讲者</string>
    <string name="hysq_jiangliangju_nozuijin">没有最近@的讲者</string>
    <string name="hysq_home_comment_send_msg_hint">请输入发表信息!</string>
    <string name="hysq_home_comment_send_msg_success_hint">发表信息成功!</string>
    <string name="hysq_home_comment_send_msg_error_hint">发表信息失败!</string>
    <string name="exhibitor_list_item_guanzhuchengong">您将关注此展商!</string>
    <string name="exhibitor_list_item_guanzhuquxiao">您将取消对此展商的关注!</string>
    <string name="exhibitor_detail_address_title">地址</string>
    <string name="exhibitor_detail_learning_center">实习中心日程 </string>
    <string name="exhibitor_detail_read_more">点击查看详情</string>
    <string name="exhibitor_detail_contact_title">联系方式</string>
    <string name="exhibitor_detail_introduce_title">展商介绍</string>
    <string name="exhibitor_detail_no_introduce_msg">暂无介绍</string>
    <string name="exhibitor_detail_title">参展商详情</string>
    <string name="exhibitor_detail_zanwei">展位:%s</string>
    <string name="exhibitor_list_no_data">暂无参展商信息，敬请期待！</string>
    <string name="speaker_speaker">讲者</string>
    <string name="speaker_moderator">主持人</string>
    <string name="speaker_role">选择身份</string>
    <string name="speaker_no_data">组委会暂未公布%1$s名单，敬请期待！</string>
    <string name="exhibitor_activity_detail_title">活动介绍</string>
    <string name="exhibitor_activity_detail_attention">关注</string>
    <string name="exhibitor_activity_detail_attentioned">已关注</string>
    <string name="exhibitor_activity_no_data">虚位以待！</string>
    <string name="exhibitor_activity_no_data_no_network">请连接网络，查看展商活动详情</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="meeting_voice_all_msg">查看全文</string>
    <string name="hyzs_list_no_data">组委会暂未发布精彩内容，敬请期待！</string>
    <string name="settings_data_current">当前版本信息</string>
    <string name="settings_data_version">版本  %.1f</string>
    <string name="settings_data_newversion">最新版本  %.1f</string>
    <string name="settings_data_manual">手动更新</string>
    <string name="settings_version_new">软件最新版本信息</string>
    <string name="setting_tel">Tel: 021-23123589</string>
    <string name="settings_contact_test">亲爱的用户您好！如果您在使用参会易的过程中有问题或发现bug，请与我们联系。谢谢！\n我们的联系方式：\n电话：021-52981008</string>
    <string name="settings_contact_text_fax">传真：021-52981008*808</string>
    <string name="settings_contact_text_mail">邮箱：service@incongress.net\n微信公众平台服务号：incongress</string>
    <string name="settings_help_way1">方式1：</string>
    <string name="settings_help_way2">方式2：</string>
    <string name="settings_help_suggest">建议留下您的联系方式</string>
    <string name="settings_help_mail">请输入邮箱地址</string>
    <string name="settings_help_content">反馈内容</string>
    <string name="settings_help_wechat">在参会易微信公共平台反馈或洽谈合作：incongress</string>
    <string name="settings_help_phone"></string>
    <string name="positive_button">确定</string>
    <string name="negative_button">取消</string>
    <string name="system_message">系统消息</string>
    <string name="personal_message">个人消息</string>
    <string name="system_nomessage">暂无系统消息\n点击屏幕重试</string>
</resources>