<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
     >

    <FrameLayout
        android:id="@+id/splash_text_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/splash_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <com.android.incongress.cd.conference.widget.IncongressTextView
                android:id="@+id/splash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
            
           <ProgressBar
            android:id="@+id/splash_pbh"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="12dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progressDrawable="@drawable/progress"
            android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.android.incongress.cd.conference.widget.IncongressTextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:paddingRight="40dp"
            android:text="@string/settings_data_current"
            android:textColor="#787878"
            android:textSize="14sp" />

        <com.android.incongress.cd.conference.widget.IncongressTextView
            android:id="@+id/settings_version_vsersion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:paddingRight="40dp"
            android:text="@string/settings_data_version"
            android:textColor="@color/theme_color"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor" />

        <com.android.incongress.cd.conference.widget.IncongressTextView
            android:id="@+id/settings_version_new"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:paddingRight="40dp"
            android:text="@string/settings_version_new"
            android:textColor="#787878"
            android:textSize="14sp" />

        <com.android.incongress.cd.conference.widget.IncongressTextView
            android:id="@+id/settings_version_newversion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:paddingRight="40dp"
            android:text="@string/settings_data_newversion"
            android:textColor="@color/theme_color"
            android:textSize="14sp" />
           <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/settings_version_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/setting_bg_update_yes"
            android:clickable="true"
            android:gravity="center" >

            <com.android.incongress.cd.conference.widget.IncongressTextView
                android:id="@+id/settings_version_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="false"
                android:drawableLeft="@drawable/setting_btn_icon_update"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:gravity="center"
                          android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/settings_data_manual"
                android:textColor="#FFF"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>