<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_container"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/action_bar_bg">

    <LinearLayout
        android:id="@+id/title_back_panel"
        android:layout_width="55dp"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:clickable="true">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:scaleType="center"
            android:src="@drawable/nav_btn_back" />
    </LinearLayout>

    <View
        android:id="@+id/title_baseline"
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@id/title_back_panel"
        android:background="@color/titlebardivider"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/title_home_panel"
        android:layout_width="55dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true">

        <Button
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@null" />
    </LinearLayout>

    <com.android.incongress.cd.conference.widget.IncongressTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/title_home_panel"
        android:layout_toRightOf="@id/title_baseline"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/title_center_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/title_home_panel"
        android:layout_toRightOf="@id/title_baseline"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_right_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:visibility="gone"></LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_edit_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/action_bar_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/negative_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_media" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/positive_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_media" />
    </RelativeLayout>


</RelativeLayout>